Fix textarea sizing issue on Firefox

--- a/src/editor/PoemEditor.module.css
+++ b/src/editor/PoemEditor.module.css
@@ -42,6 +42,8 @@
   top: 0;
   right: 0;
   bottom: 0;
+  width: 100%;
+  height: 100%;
   z-index: 1;
   appearance: none;
   resize: none;
